// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DocTest:inline_break > hardbreaks 1`] = `
"<div class="paragraph">
<p>Ruby is red.<br>
Java is black.</p>
</div>"
`;

exports[`DocTest:inline_break > plus-sign 1`] = `
"<div class="paragraph">
<p>Rubies are red,<br>
Topazes are blue.</p>
</div>"
`;
